Fixed tools clipping issue in anText

--- a/main.css
+++ b/main.css
@@ -100,10 +100,11 @@ select {
     display: block;
     width: 100%;
     background-color: white;
+    z-index: 9001;
 }
 
 #an-text-body {
-    margin-top: 125px;
+    margin-top: 150px;
 }
 
 
